--- a/style.scss
+++ b/style.scss
@@ -3,12 +3,9 @@
 @import url("http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 
 /*
-	* Autor: Ricardo Alves;
-	* Local: São Paulo - Brasil;
-	* Inspirações: ---;
-	* Data de início: 19/10/2014;
-	* Data de término: 10/11/2014;
-	* Línguagem: Português do Brasil (pt-br)
+	* Original Autor: Ricardo Alves;
+	* Expand Autor  : TommyHili;
+	* Date : 15/11/2014;
 */
 
 // ==================== Variáveis (variables) ==================== //
