--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	* Date : 15/11/2014;
 */
 /* ============================================================
-   Padrão (pattern)
+    pattern
    ============================================================ */
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
@@ -33,7 +33,7 @@ i {
 }
 
 /* ============================================================
-   Sistema Solar (Solar System)
+   Solar System
    ============================================================ */
 .sistema {
   position: absolute;
@@ -49,7 +49,7 @@ i {
 }
 
 .orbita {
-  border: 1px solid rgba(62, 87, 113, 0.5);
+  border: 2px solid rgba(62, 87, 113, 0.5);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -123,9 +123,9 @@ i {
   }
 }
 /* ==============================
-   Sistema Solar | Planetas (planets)
+   planets
    ============================== */
-/* Mercúrio */
+/* Mercury */
 .orbita:nth-child(10) {
   width: 80px;
   height: 80px;
@@ -180,7 +180,7 @@ li:nth-child(10) {
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
-/* Vênus */
+/* Venus */
 .orbita:nth-child(9) {
   width: 130px;
   height: 130px;
@@ -363,7 +363,7 @@ li:nth-child(7) {
   text-indent: -99999px;
 }
 
-/* Júpiter */
+/* Jupiter */
 .orbita:nth-child(5) {
   width: 400px;
   height: 400px;
